fixed alignment on visibility settings in top area, fixes #31

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -436,7 +436,7 @@ body.cacap #cacap-header .cacap-hero-row.stuck {
 	}
 }
 
-.field-visibility-settings-toggle { 
+#cacap-widget-list .field-visibility-settings-toggle { 
 	margin-left: 38%;
 	margin-bottom: 18px; 
 } 
